# trml2pdf

./: .gitignore  pyproject.toml
examples/: ex5.rml
tests/: test_examples.py
trml2pdf/: __init__.py  color.py  doctemplate.py  elements.py  trml2pdf.py  utils.py
