[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trml2pdf"
version = "0.3.1"
description = '''
Tiny RML2PDF is a tool to easily create PDF documents using a special HTML-like markup language.
It can be used as a Python library or as a standalone binary. It converts RML, an XML dialect that lets you define the precise appearance of a printed document, to a PDF. You can use your existing tools to generate an input file that exactly describes the layout of a printed document, and RML2PDF converts it into PDF. RML is a much more powerful and flexible alternative to XSL:FO.
The executable reads a RML file from standard input and outputs a PDF file to standard output.
'''
keywords = ["pdf", "reportlab"]
authors = [
    {name = "Fabien Pinckaers", email = "fp@tiny.be"},
]
maintainers = [
    {name = "Roman Lyashov", email = "romitch@gmail.com"},
]
license = {text = "GNU LESSER GENERAL PUBLIC LICENSE"}
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "reportlab>=3.2.0",
    "six>=1.9.0",
    "lxml",
    "click",
    "pdfrw",
]

[project.urls]
Homepage = "http://github.com/romanlv/trml2pdf/"

[project.scripts]
trml2pdf = "trml2pdf.trml2pdf:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

